compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__use___wrong_arity_less_than_required_2.snap
---
source: compiler-core/src/type_/tests/use_.rs
assertion_line: 159
expression: "\nlet f = fn(a, b, c) { 1 }\nuse <- f(1)\n123\n"
---
----- SOURCE CODE

let f = fn(a, b, c) { 1 }
use <- f(1)
123


----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.rakun:3:8
  │
3 │ use <- f(1)
  │        ^^^^ Expected 3 arguments, got 2

The function on the right of `<-` here takes 3 arguments.
You supplied 1 argument and the final one is the `use` callback function.

See: https://tour.rakun.run/advanced-features/use/
